2003-02-25  Keisuke Nishida  <knishida@netlab.jp>

	* common.c (cob_push_environment, cob_pop_environment): New functions.

2003-01-23  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h (cob_file): Break out flags.
	* fileio.c: Updated.

	* fileio.h, fileio.c (cob_dummy_status): Removed.
	* fileio.c (save_status): Check file_status before setting status.

2003-01-20  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (COB_FLAG_HAVE_SIGN): New macro.
	(COB_FLAG_SIGN_SEPARATE): New macro.
	(COB_FLAG_SIGN_LEADING): New macro.
	(COB_FLAG_BLANK_ZERO): New macro.
	(COB_FLAG_JUSTFIED): New macro.
	(COB_FIELD_HAVE_SIGN): New macro.
	(COB_FIELD_SIGN_SEPARATE): New macro.
	(COB_FIELD_SIGN_LEADING): New macro.
	(COB_FIELD_BLANK_ZERO): New macro.
	(COB_FIELD_JUSTIFIED): New macro.
	(cob_field_attr): Remove members `have_sign', `sign_separate',
	`sign_leading', `blank_zero', and `justified'.  New member
	`flags'.  All files updated.

2003-01-20  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.h (cob_decimal): Rename `number' to `data'.

2003-01-15  Keisuke Nishida  <knishida@netlab.jp>

	* move.c (cob_move_all): New function.
	(cob_move): Call cob_move_all.

2002-12-10  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_environment, cob_env): New.
	(cob_decimal_point, cob_currency_symbol, cob_numeric_separator):
	Replaced by cob_env.  All files updated.
	* common.c (cob_decimal_point, cob_currency_symbol): Removed.

2002-12-05  Keisuke Nishida  <knishida@netlab.jp>

	* common.c (cob_index, cob_index_depending): Exit when index is
	out of range.

2002-11-25  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.c (cob_decimal_get, cob_decimal_get_r): Copy decimal
	before modifying it.

2002-11-25  Keisuke Nishida  <knishida@netlab.jp>

	* strings.h (cob_inspect_init): Take second argument `replacing'.
	(cob_inspect_characters): New function.
	(cob_inspect_all): New function.
	(cob_inspect_leading): New function.
	(cob_inspect_first): New function.
